style sheet fixed nested comments and overlapping nonsense

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -32,6 +32,7 @@ footer .well {
   padding-left: 0 !important;
   padding-right: 0 !important;
 }
+
 header {
   background-color: #cee3f8;
   height: 45px;
@@ -40,27 +41,31 @@ header {
   margin-bottom: 10px;
   padding: 0 1em;
 }
+
 main {
   margin-left: 10px;
-  li {
-    list-style: none;
-    margin-bottom: 8px;
-    height: 50px;
-    .title {
-      font-size: 16px;
-      a:link, a:hover, a:active {
-        color: blue;
+  ul.posts {
+    padding-left: 0;
+    li {
+      list-style: none;
+      margin-bottom: 8px;
+      .title {
+        font-size: 16px;
+        a:link, a:hover, a:active {
+          color: blue;
+        }
+        a:visited {
+          color: #551a8b;
+        }
       }
-      a:visited {
-        color: #551a8b;
+      .tagline {
+        color: #888;
+        font-size: x-small;
       }
-    }
-    .tagline {
-      color: #888;
-      font-size: x-small;
     }
   }
 }
+
 nav#sidebar {
   margin-right: 10px;
   a {
@@ -95,11 +100,13 @@ nav#sidebar {
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d7ebff', endColorstr='#74a4d2',GradientType=0 ); /* IE6-9 */
   }
 }
+
 footer {
   color: gray;
   font-size: smaller;
   text-align: center;
 }
+
 main form {
   margin-bottom: 20px;
   fieldset {
@@ -121,6 +128,8 @@ main form {
     }
   }
 }
+
+
 article {
   .title {
     font-size: 16px;
@@ -146,6 +155,7 @@ article {
     font-size: small;
   }
 }
+
 ul.posts, article {
   ul.actions {
     padding: 1px 0;
@@ -165,16 +175,7 @@ ul.posts, article {
     }
   }
 }
-.category {
-  h2 {
-    margin-top: 0;
-  }
-  .description {
-    padding-bottom: 0.5em;
-    border-bottom: 1px solid gray;
-    margin-bottom: 0.5em;
-  }
-}
+
 nav#categories {
   background-color: #f0f0f0;
   white-space: nowrap;
@@ -199,11 +200,11 @@ nav#categories {
       display: inline;
     }
   }
-    .separator {
+  .separator {
     color: gray;
     margin: 0px .7ex 0px .7ex;
   }
-    .dropdown {
+  .dropdown {
     float: left;
     padding-left: 5px;
     button {
@@ -217,6 +218,18 @@ nav#categories {
     }
   }
 }
+
+.category {
+  h2 {
+    margin-top: 0;
+  }
+  .description {
+    padding-bottom: 0.5em;
+    border-bottom: 1px solid gray;
+    margin-bottom: 0.5em;
+  }
+}
+
 .pagination {
   background: white;
   cursor: default;
@@ -274,6 +287,7 @@ nav#categories {
     overflow: hidden;
   }
 }
+
 #session-actions {
   position: absolute;
   right: 0px;
@@ -285,6 +299,7 @@ nav#categories {
   border-top-left-radius: 7px;
   font-size: x-small;
 }
+
 form.comment {
   fieldset {
     background-color: transparent;
@@ -293,6 +308,7 @@ form.comment {
     }
   }
 }
+
 #comments {
   padding-left: 20px;
   border-left: 1px dotted gray;
